# soa-sort

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: soasort.h
